Fix z-index change on hover
The ‘post’ div is relatively positioned, so the image needs to relatively positioned as well
if it wants to end up on top.

Actually, is it really necessary to relatively position the ‘post’ div? Check another day…

--- a/style.css
+++ b/style.css
@@ -677,9 +677,12 @@ div#logo{
     display:block;
 }
 
+div#nav div#logo img {
+    position: relative;
+}
 
 div#nav div#logo img:hover{
-    z-index:3000;
+    z-index: 3000;
 }
 
 div#nav nav#menu {
